COMP 102x Project Template/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/comp102x.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/core-2.3-SNAPSHOT.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/ghost4j-0.3.1.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/jai_imageio.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/javase-2.3-SNAPSHOT.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/jna.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/junit-4.10.jar:/Applications/BlueJ.app/Contents/Resources/Java/userlib/tess4j.jar:/Users/ajuneja/HKUST-java/COMP 102x Project Template
-d
/Users/ajuneja/HKUST-java/COMP 102x Project Template/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/ajuneja/HKUST-java/COMP 102x Project Template/StudentLogic.java
<---- end of javadoc command ---->
Loading source file /Users/ajuneja/HKUST-java/COMP 102x Project Template/StudentLogic.java...
/Users/ajuneja/HKUST-java/COMP 102x Project Template/StudentLogic.java:97: error: class, interface, or enum expected
    public GameRecord[] updateHighScoreRecords(GameRecord[] highScoreRecords, String name, int level, int score) {
           ^
/Users/ajuneja/HKUST-java/COMP 102x Project Template/StudentLogic.java:104: error: class, interface, or enum expected
    }
    ^
2 errors
